Cut roboRIO CPU load: stop the NT mirror, slow CAN frames, batch signal reads
Every 2026-09-05 Driver Station log shows the rio CPU at 92-95%, enabled
or disabled, and the enabled loop ran a 26-39 ms median across all eight
robot logs. The loop was being preempted, not blocked on any one call, so
this trims load on every thread rather than one hot spot.

- Telemetry: the DogLog -> NetworkTables mirror is off. Dashboard keys
  are published individually with logDash (NT at 10 Hz) or logDashAlways;
  the SmartDashboard switch Telemetry/MirrorLogsToNT turns the full
  mirror back on in the shop and is forced off with the FMS attached.
  slowLogThisLoop() gives a 10 Hz tier; the Scheduler/* timers publish
  to the dashboard in seconds as before; alerts are read from subscriber
  queues instead of three NT array reads per loop.
- Mechanism: one BaseStatusSignal.refreshAll per mechanism per loop
  (RobotLoop counter) replaces eight refreshing getters and their
  CachedDouble subsystems. Status frames: 100 Hz position/velocity on
  leaders, 50 Hz output frames kept on leaders that have followers, 20 Hz
  for followers and diagnostics. logDiagnostics() logs voltage, currents,
  temperature and connection at 10 Hz for every mechanism.
- Swerve: odometry stays at 250 Hz. State is logged from the main loop
  instead of CTRE's odometry-thread callback, the drivetrain state is
  read once per loop with invalidation on vision fusion and resets, and
  the sixteen module current signals refresh in one call at 10 Hz.
- Robot: Phoenix hoot auto-logging off, CANBus.getStatus() at 1 Hz,
  main thread at real-time priority for the loop body, full GC on every
  disable and once a minute while disabled, Serial GC no-op JVM flags
  removed.
- Vision: telemetry at 10 Hz with MegaTag2 parsed only for the turret
  camera; LimelightHelpers caches scalar NT entries.
- BatteryLogger currents and ShotCalculator outputs (while not launching)
  at 10 Hz; prebuilt log keys in IntakeExtension and Swe